fixed css overlap

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,4 +1,4 @@
-.project {
+#projects-list .project {
     border: 2px solid var(--border-color);
     border-radius: 10px;
     overflow: hidden;
